# journal

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
make/: Makefile  make.bat
src/journal/: __init__.py  authentication.py  main.py  prompt.py  styles.tss
