[project]
name = "journal"
version = "0.1.0"
description = "An encrypted journal app for your thoughts built in python."
readme = "README.md"
authors = [
    { name = "Aarav Agarwal", email = "279409447+python-neo@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pycryptodome>=3.23.0",
    "textual>=8.2.8",
]

[project.scripts]
journal = "journal:main.main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
